Bug 615928 - Ensure msg db is available in nsMsgDBFolder::OnMessageClassified(). r=mkmelin